Change title of webservice

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>Gemini Solutions Resume</title>
+    <title>Resume Submission Exercise</title>
 </head>
 <!-- The information between the BODY and /BODY tags is displayed.-->
 <body>
