--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <li>Click "Test" and our client will test your service.</li>
                 <li>Refine your service and re-run the test until you are satisfied with the results.</li>
                 <li>When the test passes a "Submit" button will appear below the test results.</li>
-                <li>Click the "Submit" button to submit your application to Balihoo.</li>
+                <li>Click the "Submit" button to submit your application to organisation.</li>
 
             </ul>
 
