Updated description in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,16 @@
     <div class="row">
         <div class="col-lg-12">
             <h1>Resume Submission Exercise</h1>
-            <p>We get a lot of spam-bot generated emails and unqualified resumes.
-                In order to help pre-qualify job candidates we have created the following programming exercise as a part
-                of the resume submission process. In this exercise you will create a simple web service that responds
-                to requests from our client application. The client will ask your service one question at a time, in
-                no particular order, to which your server should respond with an appropriate answer in plain text
-                (not HTML).</p>
+            <p>
+                Generally, firms get a lot of spam-bot generated emails and unqualified resumes.
+                So, In order to help pre-qualify job candidates firms can use the following programming exercise as a
+                part of the resume submission process.
+                In this exercise, the job applicant will create a simple web service that responds to requests
+                from our client application. The client will ask applicant's service one question at a time,
+                in no particular order, to which applicant's server should respond with an appropriate answer in plain
+                text (not HTML).
+            </p>
+
         </div>
     </div>
 </div>
