--- a/templates/result.html
+++ b/templates/result.html
@@ -1,13 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<table border=1>
-    {% for key, value in result.items() %}
-    <tr>
-        <th> {{ key }}</th>
-        <td> {{ value }}</td>
-    </tr>
-    {% endfor %}
-</table>
-
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <h2>Got Below Details</h2>
+            <table border=2 class="table">
+                {% for key, value in result.items() %}
+                <tr>
+                    <th> {{ key }}</th>
+                    <td> {{ value }}</td>
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock %}
