Updated the templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,14 +48,13 @@
             <div class="form-group">
                 <label for="url">Service Url:</label>
                 <input type="url" class="form-control" name="url" id="url" placeholder="http://">
-                <small id="emailHelp" class="form-text text-muted">From this url we will request your resume details.
+                <small class="form-text text-muted">From this url we will request your resume details.
                 </small>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Test</button>
         </form>
     </div>
 </div>
-
 
 {% endblock %}
 
