--- a/templates/result.html
+++ b/templates/result.html
@@ -4,15 +4,23 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <h2>Got Below Details</h2>
-            <table border=2 class="table">
-                {% for key, value in result.items() %}
+
+            {% if result %}
+
+            <h2>Your Details</h2>
+            <table class="table">
+                {% for description, answer in result.values() %}
                 <tr>
-                    <th> {{ key }}</th>
-                    <td> {{ value }}</td>
+                    <th> {{ description }}</th>
+                </tr>
+                <tr>
+                    <td> {{ answer }}</td>
                 </tr>
                 {% endfor %}
             </table>
+            {% else %}
+                <p> Did not get any expected response, Received : {{ response }} </p>>
+            {% endif %}
         </div>
     </div>
 </div>
